--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
 spring.application.name=busroute
-spring.datasource.url=jdbc:mysql://localhost:8081/busroute
+spring.datasource.url=jdbc:mysql://localhost:8081/busroute?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
